:s file extension capitalization fix

--- a/UserTests/02.md
+++ b/UserTests/02.md
@@ -4,7 +4,7 @@ I did this user test after fixing most of the bugs from the first user test. I m
 
 The tester is my friend Fiona, she is a freshman at UCSB. She had no previous experiences in VR, but I had her run through SteamVR's VR tutorial prior to the test.
 
-![](02.jpg)
+![](02.JPG)
 
 ## Notes
 
