--- a/UserTests/01.md
+++ b/UserTests/01.md
@@ -4,7 +4,7 @@ I did this user test right after I was done with all the major pieces of the gam
 
 The tester was my colleague Yvette Chua. She is interested in the VR space, but does not own a headset, and does not have a lot of experiences.
 
-![](01.jpg)
+![](01.JPG)
 
 ## Notes
 
